<resources>
    <string name="app_name">C safe</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_share_wid_friends">Share with Friends</string>
    <string name="menu_near_by_stations">Near by Police stations</string>
    <string name="menu_rate_app">Verify Relations</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About C Safe</string>


    <string name="attention">Attention</string>
    <string name="oops">Connection Problem</string>


    <string name="service_temp_unavail">Service is temporarily unavailable.Please try again later.</string>
    <string name="no_connection">Please check your internet settings and try again.</string>

</resources>
