<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate"
            android:title="@string/menu_rate_app" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/menu_share_wid_friends" />

        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/nearby"
            android:title="@string/menu_near_by_stations" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />


        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
